--- a/.env.example
+++ b/.env.example
@@ -15,6 +15,13 @@ DB_DATABASE=blog
 DB_USERNAME=blog
 DB_PASSWORD=123456
 
+DB_TEST_CONNECTION=testing
+DB_TEST_HOST=testdb
+DB_TEST_PORT=3306
+DB_TEST_DATABASE=blog_test
+DB_TEST_USERNAME=blog_test
+DB_TEST_PASSWORD=123456
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DISK=local
